--- a/views/body.pug
+++ b/views/body.pug
@@ -1,5 +1,14 @@
 extends header
 
 block content
-  div(class='container')
+  div(class="h-100 bg-dark text-light container-fluid") 
+    h1(class="text-center display-4") SolarApp PWA
+    div(class="container")
+      div(class="col")
+        div(class="row")
+          div(class="col")
+          div(class="col")
+            img(src="https://image.flaticon.com/icons/png/512/25/25076.png" class="rounded mx-auto d-block img-fluid" style="max-width:100%")
+            p(class="text-center") #{powerNow} kW
+          div(class="col")
   
