--- a/views/header.pug
+++ b/views/header.pug
@@ -5,11 +5,48 @@ html(style="height:100%")
     title='SolarApp_PWA'
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
+    link(rel="manifest" href="manifest.json")
+    <!-- All Apple touch icons for iPad, iPhone, iPod -->
+    link(rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png" )
+    link(rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png" )
+    link(rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png" )
+    link(rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon-76x76.png" )
+    link(rel="apple-touch-icon" sizes="114x114" href="favicons/apple-touch-icon-114x114.png" )
+    link(rel="apple-touch-icon" sizes="120x120" href="favicons/apple-touch-icon-120x120.png" )
+    link(rel="apple-touch-icon" sizes="144x144" href="favicons/apple-touch-icon-144x144.png" )
+    link(rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon-152x152.png" )
 
+    <!-- All favicon sizes - for all devices and browsers -->
+    link(rel="icon" type="image/png" href="favicons/favicon-196x196.png" sizes="196x196" )
+    link(rel="icon" type="image/png" href="favicons/favicon-96x96.png" sizes="96x96" )
+    link(rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32" )
+    link(rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16" )
+    link(rel="icon" type="image/png" href="favicons/favicon-128x128.png" sizes="128x128" )
 
-  body(style="height:100%")
+    <!-- A favicon with four different sizes -->
+    link(rel="shortcut icon" type="image/x-icon" href="favicons/favicon.ico" )
+
+    <!-- Application color for Microsoft Windows app tile and Android status bar -->
+    meta(name="theme-color" content="#edc22e" )
+    meta(name="msapplication-TileColor" content="#edc22e" )
+
+    <!-- Application name for Microsoft Windows app tile -->
+    meta(name="application-name" content="Create PWA" )
+
+    <!-- Application icons for Microsoft Windows app tile -->
+    meta(name="msapplication-TileImage" content="favicons/ms-tile-144x144.png" )
+    meta(name="msapplication-square70x70logo" content="favicons/ms-tile-70x70.png" )
+    meta(name="msapplication-square150x150logo" content="favicons/ms-tile-150x150.png" )
+    meta(name="msapplication-wide310x150logo" content="favicons/ms-tile-310x150.png" )
+    meta(name="msapplication-square310x310logo" content="favicons/ms-tile-310x310.png" )
+
+    <!-- Application config file for Microsoft browsers -->
+    meta(name="msapplication-config" content="config.xml" )
+
+  body(style="height:100%;overscroll-behavior-y:contain")
     block content
 
     script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
+    script(src="register_worker.js")
