Add socket.io for better data exchange

--- a/views/body.pug
+++ b/views/body.pug
@@ -2,15 +2,15 @@ extends header
 
 block content
   div(class="h-100 text-light container-fluid" style="background:black")
-    h1(class="text-center display-4") SolarApp PWA
+    h1(class="text-center display-4") SolarApp
     div(class="container")
       div(class="col")
         div(class="row")
           div(class="col")
           div(class="col")
             img(src="energia-solar-gif.gif" class="rounded mx-auto d-block img-fluid" style="max-width:100%")
-            p(class="text-center") #{powerNow} #{unit}
+            p(id="powerNowAndUnit" class="text-center")
           div(class="col")
-        p(class="text-center") lastUpdate: #{lastUpdate}
+        p(id="lastUpdate" class="text-center")
 
   
