--- a/views/body.pug
+++ b/views/body.pug
@@ -12,5 +12,6 @@ block content
             p(id="powerNowAndUnit" class="text-center")
           div(class="col")
         p(id="lastUpdate" class="text-center")
+        p(id="status" class="text-center")
 
   
