--- a/views/header.pug
+++ b/views/header.pug
@@ -5,7 +5,10 @@ html(style="height:100%")
     title='SolarApp PWA'
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
+
+    link(rel='stylesheet' href='style.css')
     link(rel="manifest" href="manifest.json")
+    
     <!-- All Apple touch icons for iPad, iPhone, iPod -->
     link(rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png" )
     link(rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png" )
