Add SMHI API to get temperature info

--- a/views/body.pug
+++ b/views/body.pug
@@ -17,7 +17,12 @@ block content
               div(class="col")
                 p(id="status")
             img(src="solar_blue_icon.png" class="rounded-circle border border-warning rounded-sm mx-auto d-block img-fluid")
-            p(id="powerNowAndUnit")
+
+            div(class="row")
+              div(class="col")
+                p(id="powerNowAndUnit")
+              div(class="col")
+                p(id="temperature")
           div(class="col")
 
-    canvas(id="solarChart" width="200" height="200")
+      canvas(id="solarChart" width="200" height="100")
