Add Energy Summary to frontend

--- a/views/body.pug
+++ b/views/body.pug
@@ -24,5 +24,7 @@ block content
               div(class="col")
                 p(id="temperature")
           div(class="col")
-
-      canvas(id="solarChart" width="200" height="100")
+      div(class="row")
+        canvas(id="solarChart" width="200" height="100")
+      div(class="row")
+        p(id="summary")
