--- a/views/header.pug
+++ b/views/header.pug
@@ -57,5 +57,5 @@ html(style="height:100%")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.min.js")
 
     script(src="chartjs/dist/Chart.min.js")
-    script(src="root.js")
+    script(src="client.js")
     script(src="register-worker.js")
